Don't call suspend/resume for CSS Animations on hidden pages

Animation suspension of hidden pages introduced a regression where animations
may never start under some conditions. See https://bugs.webkit.org/show_bug.cgi?id=107609

The original change also diverged from the behavior of Firefox and IE where
animations continue to make progress while hidden.

Once we fix the issue of not servicing animations on only the animation
frame callback we'll get the main benefits of this for free. See https://bugs.webkit.org/show_bug.cgi?id=107521

BUG=227161

Review URL: https://codereview.chromium.org/13701002

git-svn-id: svn://svn.chromium.org/blink/trunk@147733 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: 86aa973c9c7193164a645f427b3f27daa934cade