third_party/WebKit/Source/WebCore/page/Settings.cpp
@@ -190,7 +190,6 @@ Settings::Settings(Page* page)
 #if ENABLE(HIDDEN_PAGE_DOM_TIMER_THROTTLING)
     , m_hiddenPageDOMTimerThrottlingEnabled(false)
 #endif
-    , m_hiddenPageCSSAnimationSuspensionEnabled(false)
 {
     // A Frame may not have been created yet, so we initialize the AtomicString
     // hash before trying to use it.
@@ -593,13 +592,5 @@ void Settings::setHiddenPageDOMTimerThrottlingEnabled(bool flag)
     m_page->hiddenPageDOMTimerThrottlingStateChanged();
 }
 #endif
-
-void Settings::setHiddenPageCSSAnimationSuspensionEnabled(bool flag)
-{
-    if (m_hiddenPageCSSAnimationSuspensionEnabled == flag)
-        return;
-    m_hiddenPageCSSAnimationSuspensionEnabled = flag;
-    m_page->hiddenPageCSSAnimationSuspensionStateChanged();
-}
 
 } // namespace WebCore
